# Physical-AI-Humanoid-Robotics-Book-Phase-2

./: .gitignore
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/api/: chat.py  main.py
backend/app/: agent.py  models.py
backend/core/: config.py  database.py  models.py  tools.py
backend/ingestion/: chunker.py  ingest.py
book/: package-lock.json  package.json
history/prompts/1-openrouter-rag-backend/: 1-create-openrouter-rag-plan.plan.prompt.md  1-create-openrouter-rag-spec.spec.prompt.md  1-create-openrouter-rag-tasks.tasks.prompt.md
history/prompts/constitution/: 1-update-constitution-docusaurus-rag.constitution.prompt.md  1-update-constitution.constitution.prompt.md
history/prompts/docusaurus-book/: 2-create-docusaurus-book-spec.spec.prompt.md
history/prompts/general/: 1-docusaurus-book-implementation-plan.plan.prompt.md  2-docusaurus-book-tasks-generation.tasks.prompt.md
specs/1-docusaurus-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-docusaurus-book/checklists/: requirements.md
specs/1-docusaurus-book/contracts/: docusaurus-config.yaml
specs/1-openrouter-rag-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-openrouter-rag-backend/checklists/: requirements.md
specs/1-openrouter-rag-backend/contracts/: api-contract.yaml
specs/master/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/master/contracts/: docusaurus-config.yaml
(+2 files in other folders)
